# fastapi-odm

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  tox.ini
mongodb/config/: init-mongo.js
src/: __init__.py  main.py
src/consts/: base.py  errors.py  logging.py
src/core/: config.py  logging.py
src/db/: mongodb.py
src/depends/: common.py
src/handlers/: exceptions.py  formatter.py  pagination.py
src/models/: base.py  user.py
src/repositories/: base.py  crud_user.py
src/routers/: index.py  user.py
src/schemas/: __init__.py  common.py  exceptions.py  pagination.py  responses.py  sorting.py  user.py
