[tool.poetry]
name = "fastapi-odm"
version = "0.1.0"
description = ""
authors = ["Carol Chen <awdrg1210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"
beanie = "^1.26.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
